@@ -338,6 +338,17 @@
       </component>
     </version>
   </module>
+  <module name="camorama">
+    <version release="gnome-2.1-fifth-toe">
+      <component name="camorama" dir="camorama">
+	<podir dir="po"/>
+	<potname name="camorama.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="dedit">
     <version release="gnome-1.4-extras">
       <component name="dedit" dir="dedit">
