@@ -1,5 +1,9 @@
 2003-01-22  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added camorama to 2.1-fifth-toe.
+
+2003-01-22  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: glib and gnome-games have
 	(silently) been branched. Reflect this.
 
